test/trivial/bradc/initvarsamename.good
initvarsamename.chpl:4: error: 'x' used before defined
